# agent_anything

./: .gitignore  MOBILE_AGENT_SYSTEM_PLAN.md  README_FFI_CHAT.md  pubspec.yaml
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  ai_chat.cpp
android/app/src/main/kotlin/com/example/flutter_application_1/: MainActivity.kt
android/lib/: build.gradle.kts
android/lib/commons/: CMakeLists.txt  VERSIONS
android/lib/commons/include/rac/core/: rac_platform_adapter.h
android/lib/commons/src/backends/llamacpp/: CMakeLists.txt
android/lib/commons/src/backends/onnx/: CMakeLists.txt
android/lib/commons/src/backends/whispercpp/: CMakeLists.txt
android/lib/commons/src/features/platform/: native_platform_adapter.cpp
lib/: llama_service.dart  main.dart
lib/bindings/: rac_bindings.dart
lib/core/: rac_core.dart
lib/features/llm/: llm_service.dart
lib/ffi/: ai_chat_ffi.dart  chat_message.dart  chat_service.dart
